--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             </div>
                             <div class="journey-content">
                                 <h3 class="text-2xl font-bold text-white mb-2">Education Foundation</h3>
-                                <p class="text-slate-400">Completed schooling at New Vision School and intermediate at New Vision College.</p>
+                                <p class="text-slate-400">Completed my Schooling and 12th from New Vision Institution where I have developed my keen inrest towards Tech and have decided that my future should be in the field of Computers and Technology.</p>
                                 <div class="mt-4 flex flex-wrap gap-2">
                                      <span class="bg-slate-700 text-cyan-200 px-3 py-1 rounded-full text-sm font-medium">10th: 10/10 GPA</span>
                                      <span class="bg-slate-700 text-cyan-200 px-3 py-1 rounded-full text-sm font-medium">12th: 9.5/10 GPA</span>
@@ -483,7 +483,7 @@
                             </div>
                             <div class="journey-content">
                                 <h3 class="text-2xl font-bold text-white mb-2">B.Tech in CSE</h3>
-                                <p class="text-slate-400">Final year at Swarna Bharathi Institute of Science and Technology.</p>
+                                <p class="text-slate-400"> I am pursuing my final year  in Computer Science and Engineering at Swarna Bharathi Institute of Science and Technology. Even though being in Tech has been my Dream, joining this College wasn't.But surprisingly the Endevours that I made in my Btech have made me never regret my decision. </p>
                                 <div class="mt-4 flex flex-wrap gap-2">
                                      <span class="bg-slate-700 text-cyan-200 px-3 py-1 rounded-full text-sm font-medium">CGPA: 8.22</span>
                                 </div>
@@ -495,7 +495,7 @@
                             </div>
                             <div class="journey-content">
                                 <h3 class="text-2xl font-bold text-white mb-2">Project Incubation</h3>
-                                <p class="text-slate-400">Developed Swiftly, Shopwiser, and an AI Email Composer.</p>
+                                <p class="text-slate-400">Developed multiple projects like Swiftly, Shopwiser, an AI Email Composer, a Blog Website, a secure and scalable College Network as part of Cisco Cyber Security Internship and have been author of our College's Weekly Tech Report. These experiences that I gained in multiple domains have made me more confidfent and drives my enthusiasm forward for the world of Tech. </p>
                             </div>
                         </div>
                          <div class="journey-item reveal">
@@ -504,7 +504,7 @@
                             </div>
                             <div class="journey-content">
                                 <h3 class="text-2xl font-bold text-white mb-2">Future Trajectory</h3>
-                                <p class="text-slate-400">Seeking opportunities in AI, automotive tech, and space exploration.</p>
+                                <p class="text-slate-400">I would like to upskill myself and push myself in acheiving my dream careers where I can work with Tech and Cars and keep sharing my Knowledge and Experience that I gain and someday finally attending the Apple WWDC. </p>
                             </div>
                         </div>
                     </div>
@@ -807,3 +807,4 @@
     </script>
 </body>
 </html>
+
