--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <a href="#projects" class="mobile-link text-2xl text-slate-300 hover:text-cyan-400 transition duration-300">Projects</a>
             <a href="#certifications" class="mobile-link text-2xl text-slate-300 hover:text-cyan-400 transition duration-300">Certifications</a>
             <a href="#contact" class="mobile-link text-2xl text-slate-300 hover:text-cyan-400 transition duration-300">Contact</a>
-            <a href="KOLLURI%20SHIVA%20KOUSHIK..pdf" target="_blank" class="mobile-link border border-cyan-400 text-cyan-400 font-semibold py-2 px-5 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300">Resume</a>
+            <a href="KOLLURI%20SHIVA%20KOUSHIK.pdf" target="_blank" class="mobile-link border border-cyan-400 text-cyan-400 font-semibold py-2 px-5 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300">Resume</a>
         </div>
 
 
@@ -389,7 +389,7 @@
                     </h2>
                     <div class="flex justify-center space-x-4 reveal" style="transition-delay: 0.4s;">
                         <a href="#projects" class="bg-cyan-500 text-black font-bold py-3 px-8 rounded-lg hover:bg-cyan-400 transition duration-300 transform hover:scale-105">View My Work</a>
-                        <a href="KOLLURI%20SHIVA%20KOUSHIK..pdf" target="_blank" class="border border-cyan-400 text-cyan-400 font-semibold py-3 px-8 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300 transform hover:scale-105">Resume</a>
+                        <a href="KOLLURI%20SHIVA%20KOUSHIK.pdf" target="_blank" class="border border-cyan-400 text-cyan-400 font-semibold py-3 px-8 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300 transform hover:scale-105">Resume</a>
                     </div>
                 </div>
             </section>
@@ -807,4 +807,5 @@
     </script>
 </body>
 </html>
+
 
