--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <a href="#certifications" class="text-slate-300 hover:text-cyan-400 transition duration-300">Certifications</a>
                     <a href="#contact" class="text-slate-300 hover:text-cyan-400 transition duration-300">Contact</a>
                 </nav>
-                <a href="https://ibb.co/CKGxHKRh" target="_blank" class="hidden md:block border border-cyan-400 text-cyan-400 font-semibold py-2 px-5 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300">Resume</a>
+                <a href="KOLLURI%20SHIVA%20KOUSHIK.pdf" target="_blank" class="hidden md:block border border-cyan-400 text-cyan-400 font-semibold py-2 px-5 rounded-lg hover:bg-cyan-400 hover:text-black transition duration-300">Resume</a>
                 <button id="hamburger-btn" class="md:hidden text-white">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                 </button>
@@ -807,5 +807,6 @@
     </script>
 </body>
 </html>
+
 
 
