--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                     <p class="max-w-2xl mx-auto text-slate-400 text-lg mb-8 reveal" style="transition-delay: 0.2s;">
                         I'm always open to discussing new projects, creative ideas, or opportunities to be part of an amazing team. Feel free to reach out!
                     </p>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=shivakoshik2005@gmail.com" target="_blank" class="inline-block bg-cyan-500 text-black font-bold py-3 px-8 rounded-lg hover:bg-cyan-400 transition duration-300 transform hover:scale-105 reveal" style="transition-delay: 0.4s;">
+                    <a href="mailto:shivakoushik2005@gmail.com" target="_blank" class="inline-block bg-cyan-500 text-black font-bold py-3 px-8 rounded-lg hover:bg-cyan-400 transition duration-300 transform hover:scale-105 reveal" style="transition-delay: 0.4s;">
                         Say Hello
                     </a>
                 </div>
@@ -807,6 +807,7 @@
     </script>
 </body>
 </html>
+
 
 
 
