--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <div class="grid lg:grid-cols-5 gap-12 items-center mb-32">
                         <div class="lg:col-span-2 reveal text-center">
                              <div class="glass-card rounded-2xl p-4 inline-block max-w-md mx-auto">
-                                 <img src="https://ibb.co/DPGykJw5/my-image.jpg" alt="Developer Profile" class="rounded-2xl w-full h-auto object-cover">
+                                 <img src="https://ibb.co/DPGykJw5.jpg" alt="Developer Profile" class="rounded-2xl w-full h-auto object-cover">
                                  
                              </div>
                              <p class="signature text-3xl text-cyan-300 mt-4">Shivakoushik</p>
@@ -834,4 +834,5 @@
     </script>
 </body>
 </html>
+
 
